--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
-    
-    <h1>Task detail</h1>
+{{error}}
+
+<h1>Task detail</h1>
 
 
 <h1>{{task.title}}</h1>
+
+<form method="POST">
+
+    {% csrf_token %}
+    {{error}}
+    {{form.as_p}} 
+    <button>
+        Update
+    </button>
+</form>
 
 
 
