Agregamos la funcion de completar task

--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% csrf_token %} {% block content %}
-<h1>TAREAS</h1>
+<h1>Task Pending</h1>
 
 <ul>
   {% for task in tasks %}
