--- a/tasks/templates/create_task.html
+++ b/tasks/templates/create_task.html
@@ -1,13 +1,13 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <h1>Create Task</h1>
 
 <form action="/tasks/create/" method="POST">
-    {{error}}
-    {% csrf_token %}
-    {{form}}
+    {{error}} {% csrf_token %} {{form}}
     <button>Save</button>
+</form>
+<form method="POST">
+    <button>Complete</button>
 </form>
 
 {% endblock %}
