--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -17,6 +17,20 @@
     </button>
 </form>
 
+<form action="{% url 'complete_task' task.id %}" method="POST">
+    {% csrf_token %}
+    <button>
+        Complete
+    </button>
+</form>
+
+<form action="{% url 'complete_task' task.id %}" method="POST">
+    {% csrf_token %}
+    <button>
+        Delete
+    </button>
+</form>
+
 
 
 
