--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -24,7 +24,7 @@
     </button>
 </form>
 
-<form action="{% url 'complete_task' task.id %}" method="POST">
+<form action="{% url 'task_delete' task.id %}" method="POST">
     {% csrf_token %}
     <button>
         Delete
