--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -13,15 +13,15 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/home/">HOME</a>
+                    <a href="{% url 'home' %}">HOME</a>
                 </li>
                 
                 {% if user.is_authenticated %}
                 <li>
-                    <a href="/tasks/">TASK</a>
+                    <a href="{% url 'task' %}">TASK</a>
                 </li>
                 <li>
-                    <a href="/logout/">LOGOUT</a>
+                    <a href="{% url 'logout' %}">LOGOUT</a>
                 </li>
                 <li>
                     <a href="/tasks/create/">CREATE TASK</a>
@@ -32,10 +32,10 @@
 
                 {% else %}
                 <li>
-                    <a href="/signup/">SIGNUP</a>
+                    <a href="{% url 'signup' %}">SIGNUP</a>
                 </li>
                 <li>
-                    <a href="/signin/">SIGNIN</a>
+                    <a href="{% url 'signin' %}">SIGNIN</a>
                 </li>
                 
 
