--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -6,40 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Django CRUD</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="{% url 'home' %}" class="nav-link">HOME</a>
+                    </li>
+    
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="{% url 'task' %}" class="nav-link">TASK</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'logout' %}" class="nav-link">LOGOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/tasks/create/" class="nav-link">CREATE TASK</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'tasks_completed' %}" class="nav-link">TASK COMPLETED</a>
+                    </li>
+    
+                    {% else %}
+                    <li class="nav-item">
+                        <a href="{% url 'signup' %}" class="nav-link" >SIGNUP</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'signin' %}" class="nav-link">SIGNIN</a>
+                    </li>
+    
+    
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+
+
+
+
+
     <div class="btn-group" role="group" aria-label="Basic outlined example">
         <nav>
             <ul>
-                <li>
-                    <a href="{% url 'home' %}">HOME</a>
-                </li>
                 
-                {% if user.is_authenticated %}
-                <li>
-                    <a href="{% url 'task' %}">TASK</a>
-                </li>
-                <li>
-                    <a href="{% url 'logout' %}">LOGOUT</a>
-                </li>
-                <li>
-                    <a href="/tasks/create/">CREATE TASK</a>
-                </li>
-                <li>
-                    <a href="{% url 'tasks_completed' %}">TASK COMPLETED</a>
-                </li>
-
-                {% else %}
-                <li>
-                    <a href="{% url 'signup' %}">SIGNUP</a>
-                </li>
-                <li>
-                    <a href="{% url 'signin' %}">SIGNIN</a>
-                </li>
-                
-
-                {% endif %}
 
             </ul>
         </nav>
