Se estilizó el home

--- a/tasks/templates/home.html
+++ b/tasks/templates/home.html
@@ -2,22 +2,31 @@
 
 
 {% block content %}
-<h1>HOME</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim esse repellat assumenda reprehenderit possimus cum
-    accusamus excepturi, laborum, repellendus veritatis minima iusto nostrum obcaecati sit animi quibusdam ipsa. Culpa
-    vitae, eos autem porro dolore dolor. Ut, nisi placeat. Repudiandae est iste unde odio officiis fugit atque
-    exercitationem velit laboriosam doloribus aliquid debitis, dicta nesciunt deleniti sint! Ipsa officia asperiores
-    quae hic voluptate nobis suscipit dolorum totam quasi esse deleniti, id soluta, nisi enim! Vitae assumenda maiores
-    eos debitis voluptatem quae fugiat quibusdam laborum explicabo nesciunt officiis reprehenderit nemo molestiae velit
-    beatae optio repellendus temporibus, facilis dolorem. Officia voluptate dolorem laudantium!xcepturi, laborum, repellendus veritatis minima iusto nostrum obcaecati sit animi quibusdam ipsa. Culpa
-    vitae, eos autem porro dolore dolor. Ut, nisi placeat. Repudiandae est iste unde odio officiis fugit atque
-    exercitationem velit laboriosam doloribus aliquid debitis, dicta nesciunt deleniti sint! Ipsa officia asperiores
-    quae hic voluptate nobis suscipit dolorum totam quasi esse deleniti, id soluta, nisi enim! Vitae assumenda maiores
-    eos debitis voluptatem quae fugiat quibusdam laborum explicabo nesciunt officiis reprehenderit nemo molestiae velit
-    beatae optio repellendus temporibus, facilis dolorem. Officia voluptate dolorem laudantium!xcepturi, laborum, repellendus veritatis minima iusto nostrum obcaecati sit animi quibusdam ipsa. Culpa
-    vitae, eos autem porro dolore dolor. Ut, nisi placeat. Repudiandae est iste unde odio officiis fugit atque
-    exercitationem velit laboriosam doloribus aliquid debitis, dicta nesciunt deleniti sint! Ipsa officia asperiores
-    quae hic voluptate nobis suscipit dolorum totam quasi esse deleniti, id soluta, nisi enim! Vitae assumenda maiores
-    eos debitis voluptatem quae fugiat quibusdam laborum explicabo nesciunt officiis reprehenderit nemo molestiae velit
-    beatae optio repellendus temporibus, facilis dolorem. Officia voluptate dolorem laudantium!</p>
+
+<main class="container py-5">
+    <section class="card card-body text-center animate__bounce">
+        <h1 class="animate__animated animate__bounce display-1 text-bg-success">Django Reminders</h1>
+        <p class="animate__animated animate__bounce"> Es una aplicación web de gestión de tareas diseñada para ayudarte
+            a organizar y llevar un
+            registro de tus actividades diarias de manera efectiva. Con Django Reminders, puedes crear, editar y
+            eliminar tareas, así como marcarlas como completadas. Además, la aplicación te permite asignar tareas a
+            proyectos específicos y establecer fechas de vencimiento para un mejor control de tus responsabilidades. Con
+            una interfaz de usuario intuitiva y funcionalidades versátiles, Django Reminders te ayuda a optimizar tu
+            productividad y mantener tus tareas bajo control. ¡Simplifica tu vida y mantén tus objetivos en el camino
+            con Django Reminders!"</p>
+        <div>
+            <a class="btn btn-outline-success" href="/signin/">Sign In</a>
+            <a class="btn btn-outline-success"href="/signup/">Signup</a>
+        </div>
+    </section>
+</main>
+
+
+
+
+
+
+
+
+
 {% endblock %}
