--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -7,6 +7,7 @@
 
     <title>Django CRUD</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                     <li class="nav-item">
                         <a href="{% url 'home' %}" class="nav-link">HOME</a>
                     </li>
-    
+
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a href="{% url 'task' %}" class="nav-link">TASK</a>
@@ -36,16 +37,16 @@
                     <li class="nav-item">
                         <a href="{% url 'tasks_completed' %}" class="nav-link">TASK COMPLETED</a>
                     </li>
-    
+
                     {% else %}
                     <li class="nav-item">
-                        <a href="{% url 'signup' %}" class="nav-link" >SIGNUP</a>
+                        <a href="{% url 'signup' %}" class="nav-link">SIGNUP</a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'signin' %}" class="nav-link">SIGNIN</a>
                     </li>
-    
-    
+
+
                     {% endif %}
                 </ul>
             </div>
@@ -61,7 +62,7 @@
     <div class="btn-group" role="group" aria-label="Basic outlined example">
         <nav>
             <ul>
-                
+
 
             </ul>
         </nav>
