--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -1,42 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
-{{error}}
+<main class="container">
 
-<h1>Task detail</h1>
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <h1 class=" text-bg-success">{{task.title}}</h1>
 
+            <form method="POST">
+                {% csrf_token %}
+                {{error}}
+                {{form.as_p}}
+                <button class="btn btn-primary">
+                    Update
+                </button>
+            </form> 
 
-<h1>{{task.title}}</h1>
+        <div class="mt-1 d-flex justify-content-between">
+        
+            <form action="{% url 'complete_task' task.id %}" method="POST">
+                {% csrf_token %}
+                <button class="btn btn-success">
+                    Complete
+                </button>
+            </form>
+            
+            <form action="{% url 'task_delete' task.id %}" method="POST">
+                {% csrf_token %}
+                <button class="btn btn-danger">
+                    Delete
+                </button>
+            </form>
+        </div>
 
-<form method="POST">
-    {% csrf_token %}
-    {{error}}
-    {{form.as_p}} 
-    <button>
-        Update
-    </button>
-</form>
-
-<form action="{% url 'complete_task' task.id %}" method="POST">
-    {% csrf_token %}
-    <button>
-        Complete
-    </button>
-</form>
-
-<form action="{% url 'task_delete' task.id %}" method="POST">
-    {% csrf_token %}
-    <button>
-        Delete
-    </button>
-</form>
-
-
-
-
-
-
-
-
+        </div>
+    </div>
+</main>
 
 
 
