--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -1,25 +1,37 @@
 {% extends 'base.html' %} {% csrf_token %} {% block content %}
-<h1>Task Pending</h1>
 
-<ul>
-  {% for task in tasks %}
 
-  <li>
-    <a href="{% url 'task_detail' task.id %}">
-      {% if task.important %}
-      <strong>{{task.title}}</strong>
-      {% else %} {{task.title}}
+<main class="container">
 
-      {% endif %}
+  
+</main>
+  <div class="row">
+    <div class="col-md-6 offset-md-4">
+      <h1 class="text-center display-3 py-5">Task Pending</h1>
+      <ul class="list-group">
+        {% for task in tasks %}
+        <a class="list-group-item" href="{% url 'task_detail' task.id %}">
+          <header class="d-flex justify-content-between">
+            {% if task.important %}
+            <h1 class="fw-bold text-success">{{task.title}}</h1>
+            {% else %}
+            <h1 class="fw-bold">{{task.title}}</h1>
+            {% endif %}
+            <p>{{task.user.username}}</p>
+          </header>
+          <p>{{task.description}}</p>
+          <p>{{task.important}}</p>
+          <p>{{task.datecompleted | date:'M j Y: i'}}</p>
+        </a>
+        
+        {% endfor %}
+      
+      </ul>
+      
+    </div>
+  
+  </div>
+</main>
 
-      <p>{{task.description}}</p>
-      <p>{{task.user.username}}</p>
-      <p>{{task.important}}</p>
-
-      <p>{{task.datecompleted |date:'M j Y:i'}}</p>
-    </a>
-  </li>
-  {% endfor %}
-</ul>
-
-{% endblock %}
+  
+  {% endblock %}
